--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <div class="container">
             <h1 class="titulo">PRODUCTOS</h1>
             <div class="row row-cols-1 row-cols-md-3 g-4">
-                <div class="col">
+                <div class="col" id="tarjeta">
                   <div class="card">
                     <div class="d-flex justify-content-between card-body card_precio">
                         <div >
