--- a/index.html
+++ b/index.html
@@ -53,22 +53,22 @@
               <div class="carousel-item active" data-bs-interval="10000">
                 <img src="./assets/images/slider/home-bg.jpg" class="d-block slider_img w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block text-start slider_text">
-                  <h5>First slide label</h5>
-                  <p>Some representative placeholder content for the first slide.</p>
+                  <h5>La mejor calidad</h5>
+                  <p>Tenemos Productos mas frescos para tus comidas</p>
                 </div>
               </div>
               <div class="carousel-item" data-bs-interval="2000">
                 <img src="./assets/images/slider/home-2.png" class="d-block slider_img slider_padImg" alt="...">
                 <div class="carousel-caption d-none d-md-block text-end slider_text slider_text_right">
-                  <h5>Second slide label</h5>
-                  <p>Some representative placeholder content for the second slide.</p>
+                  <h5>Entregas diarias</h5>
+                  <p>Las entregas son hechas en el mismo dia que se realizo el pedido </p>
                 </div>
               </div>
               <div class="carousel-item">
                 <img src="./assets/images/slider/home-3.png " class="d-block slider_img slider_padImg  " alt="...">
                 <div class="carousel-caption d-none d-md-block text-end  slider_text slider_text_right">
-                  <h5>Third slide label</h5>
-                  <p>Some representative placeholder content for the third slide.</p>
+                  <h5>Verduras organicas</h5>
+                  <p>Las frutas y verduras son cultivadas de forma organica sin insecticidas.</p>
                 </div>
               </div>
             </div>
